feat: 修改环境变量

--- a/src/project.config.json
+++ b/src/project.config.json
@@ -1,6 +1,6 @@
 {
-  "appid": "wx2c940aaf35969948",
-  "projectname": "社区服务",
+  "appid": "{appId}",
+  "projectname": "{appName}",
   "compileType": "miniprogram",
   "libVersion": "3.3.0",
   "packOptions": {
