--- a/src/app.json
+++ b/src/app.json
@@ -17,7 +17,7 @@
     "borderStyle": "black",
     "list": [
       {
-        "pagePath": "page/takeout/index",
+        "pagePath": "page/home/index",
         "text": "存餐",
         "iconPath": "images/icon/home.png",
         "selectedIconPath": "images/icon/selectHome.png"
@@ -40,5 +40,5 @@
     "van-collapse-item": "@components/vant/collapse-item/index",
     "van-popup": "@components/vant/popup/index"
   },
-  "__usePrivacyCheck__": true
+  "__usePrivacyCheck__": false
 }
