--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "string-replace-loader": "^3.1.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "wxmini-plugin-webpack": "^1.0.12"
+    "wxmini-plugin-webpack": "latest"
   }
 }
