fix: 修复打包路径错误问题

--- a/src/app.json
+++ b/src/app.json
@@ -17,7 +17,7 @@
     "borderStyle": "black",
     "list": [
       {
-        "pagePath": "page/takeout/index",
+        "pagePath": "page/home/index",
         "text": "存餐",
         "iconPath": "images/icon/home.png",
         "selectedIconPath": "images/icon/selectHome.png"
