--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-loader": "^9.1.3",
-    "copy-webpack-plugin": "^11.0.0",
-    "cross-env": "^7.0.3",
-    "less": "^4.2.0",
-    "less-loader": "^11.1.4",
-    "miniprogram-api-typings": "^3.12.2",
-    "string-replace-loader": "^3.1.0",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "wxmini-plugin-webpack": "^1.0.12"
+    "babel-loader": "~9.1.3",
+    "copy-webpack-plugin": "~11.0.0",
+    "cross-env": "~7.0.3",
+    "less": "~4.2.0",
+    "less-loader": "~11.1.4",
+    "miniprogram-api-typings": "~3.12.2",
+    "string-replace-loader": "~3.1.0",
+    "webpack": "~5.89.0",
+    "webpack-cli": "~5.1.4",
+    "wxmini-plugin-webpack": "^1.0.13"
   }
 }
